<resources>
    <string name="app_name">AndroidCoreLearn</string>
    <string name="start_not_sticky_service">Start not sticky service</string>
    <string name="select_topic">Select topic:</string>
    <string name="binderservice_control_panel">BinderService control panel</string>
    <string name="start_binder_service_screen">Start binder service screen</string>
    <string name="bound_unbound">Bound/Unbound</string>
    <string name="current_status">Current status</string>
    <string name="force_stop_boud_service">Force stop boud service</string>
    <string name="unbound">Unbound</string>
    <string name="bound">Bound</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragments_topic">Fragments topic:</string>
    <string name="mobile_and_tablets_ui">Mobile and tablets UI</string>
    <string name="commits_samples">Commits samples</string>
    <string name="commit">Commit</string>
    <string name="commit_allow_state_loss">Commit Allow State Loss</string>
    <string name="commit_now">Commit Now</string>
    <string name="commit_now_allow_state_loss">Commit Now Allow State Loss</string>
    <string name="transactions_samples">Transactions samples</string>
    <string name="wait_few_seconds_this_screen_will_be_automatically_closed">Wait few seconds,\nthis screen will be automatically closed</string>
    <string name="open_activity_before_commits">Open Activity before commits</string>
    <string name="all_operations_will_be_execute_by">All operations will be execute by commit()</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="add">Add</string>
    <string name="add_to_back_stack">Add to back stack</string>
    <string name="enter_backstack_name">Enter backStack name</string>
    <string name="add_fragment">Add fragment</string>
    <string name="remove_by_backstack_name">Remove by BackStack name</string>
    <string name="put_new_fragment">Put new fragment</string>
    <string name="backstack_sample">BackStack Sample</string>
    <string name="to_unlock_buttons_enter_backstack_name">To unlock buttons enter backStack name</string>
    <string name="is_set_flag_pop_back_stack_inclusive">Is set flag POP_BACK_STACK_INCLUSIVE</string>
    <string name="fragment_from_xml">Fragment from XML</string>
    <string name="fragment_which_added_programmatically">Fragment which added programmatically</string>
    <string name="fragment_lifecycle">Fragment lifecycle</string>
    <string name="multi_threads_topic">Multi-threads topic:</string>
    <string name="simple_threads">Simple threads</string>
    <string name="handler_and_looper">Handler and Looper</string>
    <string name="services">Services</string>
    <string name="fragments">Fragments</string>
    <string name="multi_threads">Multi threads</string>
    <string name="wait_and_notify">Wait() and notify()</string>
    <string name="stopping_thread">Stopping thread</string>
    <string name="alive_and_join">alive() and join()</string>
    <string name="run_job">Run job</string>
    <string name="simple_handler_sample">Simple handler sample</string>
    <string name="set_delay_time_in_seconds">Set delay time in seconds</string>
    <string name="send_message_with_delay">Send message with delay</string>
    <string name="write_your_message">Write your message...</string>
    <string name="delayed_msg_sample">Delayed messages sample</string>
    <string name="executors_section">Executors section</string>
    <string name="simple_queue_executor">Simple Queue Executor</string>
    <string name="executors">Executors</string>
    <string name="fixed_thread_pool">Fixed thread pool</string>
    <string name="single_thread_executor">Single thread executor</string>
    <string name="all_executor_service_methods">All ExecutorService methods</string>
    <string name="future_task_demo">FutureTask demo</string>
    <string name="start">Start</string>
    <string name="first_test_task">First test task</string>
    <string name="thread_number_pattern">Thread number: %d</string>
    <string name="prime_number_generated_pattern">prime number generated: %d</string>
    <string name="arch_components">Arch components</string>
    <string name="viewmodel">ViewModel</string>
    <string name="livedata">LiveData</string>
    <string name="transition">Transition</string>
    <string name="shared_elements">Shared elements</string>
    <string name="animations">Animations</string>
    <string name="avatar_transition">avatar_transition</string>
    <string name="open_detail">Open detail</string>
    <string name="select">Select</string>
    <string name="shared_ui_icon">shared_ui_icon</string>
    <string name="shared_ui_text">shared_ui_text</string>
    <string name="shared_ui_view">shared_ui_view</string>
    <string name="shared_ui_elements">Shared UI elements</string>
    <string name="title">Title</string>
    <string name="custom_layout_manager">Custom LayoutManager</string>
    <string name="views_topic">Views section</string>
    <string name="views">Views</string>
    <string name="constraintset_1">ConstraintSet #1</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="one">One</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="layout_changes">Layout changes</string>
    <string name="scene_2">Scene 2</string>
    <string name="scene_1">Scene 1</string>
    <string name="scene_demo">Scene demo</string>
</resources>
