<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ACLBaseWidget.LinearLayout.TopicMenu"
    tools:context="com.shevart.androidcorelearn.fragments.FragmentsDemoActivity">

    <TextView
        style="@style/ACLBaseWidget.TextView.TopicTitle.Sub"
        android:text="@string/fragments_topic" />

    <Button
        android:id="@+id/btFragmentsLifecycle"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/fragment_lifecycle" />

    <Button
        android:id="@+id/btMobileAndTabletFragmentsUi"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/mobile_and_tablets_ui" />

    <Button
        android:id="@+id/btCommitsSample"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/commits_samples" />

    <Button
        android:id="@+id/btTransactionsSample"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/transactions_samples" />

    <Button
        android:id="@+id/btBackStackSample"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/backstack_sample" />
</LinearLayout>