<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ACLBaseWidget.LinearLayout.TopicMenu"
    tools:context="com.shevart.androidcorelearn.multi_threading.executors.ExecutorsDemoActivity">

    <TextView
        style="@style/ACLBaseWidget.TextView.TopicTitle.Sub"
        android:text="@string/executors_section" />

    <Button
        android:id="@+id/btSimpleQueueExecutor"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/simple_queue_executor" />

    <Button
        android:id="@+id/btFixedThreadPool"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/fixed_thread_pool" />

    <Button
        android:id="@+id/btSingleThreadExecutor"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/single_thread_executor" />

    <Button
        android:id="@+id/btAllExecutorServiceMethods"
        style="@style/ACLBaseWidget.Button.OpenTopic"
        android:text="@string/all_executor_service_methods" />
</LinearLayout>