<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shevart.androidcorelearn.animation.transition.sharedviewsui.SharedUIStartActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cvSharedUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:transitionName="@string/shared_ui_view"
        app:cardElevation="4dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="56dp"
            android:padding="4dp">

            <ImageView
                android:id="@+id/ivIconSharedUI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:transitionName="@string/shared_ui_icon"
                app:srcCompat="@drawable/ic_place_grey" />

            <TextView
                android:id="@+id/tvSharedUISelect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:padding="8dp"
                android:text="@string/select"
                android:textColor="@color/grey"
                android:transitionName="@string/shared_ui_text" />

        </FrameLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
