<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <CheckBox
        android:id="@+id/cbAddToBackStack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_to_back_stack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="@+id/cbAddToBackStack"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/cbAddToBackStack"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btReplace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/replace"
        app:layout_constraintBottom_toBottomOf="@+id/btAdd"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btAdd" />

    <Button
        android:id="@+id/btRemove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/remove"
        app:layout_constraintLeft_toLeftOf="@+id/btAdd"
        app:layout_constraintRight_toRightOf="@+id/btAdd"
        app:layout_constraintTop_toBottomOf="@+id/btAdd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/all_operations_will_be_execute_by"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRemove"
        app:layout_constraintHorizontal_bias="0.437" />
</android.support.constraint.ConstraintLayout>