<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ACLBaseWidget.LinearLayout.TopicMenu"
    tools:context="com.shevart.androidcorelearn.multi_threading.handler_looper.handler_delayed_messages.HandlerDelayedActivity">

    <EditText
        android:id="@+id/etDelayedMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/write_your_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/sbDelayInSeconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvCurrentDelayInSecs"
            style="@style/ACLBaseWidget.TextView.TopicTitle.Sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_delay_time_in_seconds" />

    <Button
        android:id="@+id/btSendMessageWithDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message_with_delay" />

</LinearLayout>
